# binance-streamer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STATUS.md  README.md  WRITE_OPTIMIZATION_REPORT.md  config.yaml  debug_websocket.py  profile_performance.py  pyproject.toml  run.py  test_results_summary.txt
src/binance_streamer/: __init__.py  config.py  daemon.py  data_fetcher.py  file_writer.py  main.py  orderbook_manager.py  orderbook_process.py  process_manager.py  simple_daemon.py  websocket_client.py  websocket_client_orderbook.py
src/binance_streamer/utils/: __init__.py  latency_analyzer.py
tests/: README.md  __init__.py  run_all_tests.py  test_results_summary.txt  test_utils.py
tests/integration/: simple_test.py  test_live_system.py
tests/performance/: optimized_file_writer.py  profile_performance.py  quick_test_optimization.py
tests/unit/: test_optimized_write.py
